# django-sage-seo

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  index.rst
docs/source/meta/: index.rst  intro.rst  usage.rst
docs/source/script_tag/: index.rst  intro.rst
docs/source/slug_swap/: index.rst  intro.rst  usage.rst
docs/source/start/: admin.rst  index.rst  installation.rst  introduction.rst  views.rst
docs/source/url_redirect/: index.rst  intro.rst
locales/en/LC_MESSAGES/: django.po
locales/fa/LC_MESSAGES/: django.po
sage_seo/: apps.py  context_processor.py  funcs.py  urls.py
sage_seo/admin/: __init__.py  meta_info.py  robot.py  script_tag.py  slug_swap.py  url_redirect.py
sage_seo/admin/actions/: __init__.py  robot.py
sage_seo/forms/: __init__.py  seo.py
sage_seo/helpers/: choices.py  enums.py
sage_seo/locale/ar/LC_MESSAGES/: django.po
sage_seo/locale/fa/LC_MESSAGES/: django.mo
sage_seo/middleware/: slug_swap.py  url_redirect.py
sage_seo/migrations/: 0001_initial.py
sage_seo/models/: __init__.py  meta_info.py  robot.py  script_tag.py  slug_swap.py  url_redirect.py  validators.py
sage_seo/models/mixins/: seo.py
sage_seo/schemas/: __init__.py  blog.py  product.py  static.py
sage_seo/templates/: index.html
sage_seo/templatetags/: seo.py
sage_seo/views/: __init__.py  robot.py
